# FugueGenerator

./: CMakeLists.txt  README.md  music_notation.cpp
ref/: fugue_as_xml.xml  fugue_as_yaml.yaml
src/: fugue_gen.cpp  music_notation.cpp
